backend/src/main/java/com/example/sap_shop/error/TokenExpiredException.java
package com.example.sap_shop.error;

public class TokenExpiredException extends Exception {
    public TokenExpiredException(String message) {
        super(message);
    }
}
